@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 19:08:33 brook Exp $
+
+SHA1 (R/gh_1.0.1.tar.gz) = 0d6967fd8463d08a40aef630c10ff25728407bcc
+RMD160 (R/gh_1.0.1.tar.gz) = eccacd566867fc2a849b5108db5f595d652d0c30
+SHA512 (R/gh_1.0.1.tar.gz) = ce9a7412f0c30825366513bd4a36e5132fe26e4ddac9aff3dc4bf479046c7a093c32585e433217e8aeab921a36bdf0e562773c2dfacff9bcdec6fbb1a9fbdbd7
+Size (R/gh_1.0.1.tar.gz) = 15513 bytes
